...
        theName, theEmail, thePassword, direct);

    if (!ok) return _mostrarError();

    if (direct) {
      messengerKey.currentState?.showSnackBar(
        SnackBar(content: Text('User created successfully')),
      );

      return;
    }

    setState(() => registerPhase = false);
...
    return Form(
      key: _registerKey,
      child: AutofillGroup(
        child: Column(
          mainAxisSize: MainAxisSize.min,
          children: [
            const Text("Sign Up Information", style: TextStyle(fontSize: 20)),
            const SizedBox(height: 20),

            // NAME
            TextFormField(
              focusNode: _nameFocus,
              controller: controllerName,
              decoration: const InputDecoration(
                labelText: "Name",
                border: OutlineInputBorder(
                  borderRadius: BorderRadius.all(Radius.circular(20)),
                ),
                prefixIcon: Icon(Icons.badge_outlined),
              ),
              textInputAction: TextInputAction.next,
...

            // CONFIRM PASSWORD (matches password)
            TextFormField(
              focusNode: _confirmPasswordFocus,
              controller: controllerConfirmPassword,
              decoration: InputDecoration(
                labelText: "Confirm password",
                border: const OutlineInputBorder(
                  borderRadius: BorderRadius.all(Radius.circular(20)),
                ),
                prefixIcon: const Icon(Icons.lock_outline),
                suffixIcon: IconButton(
                  icon: Icon(
...

            Row(
              children: [
                Expanded(
                  child: FilledButton.tonal(
                    onPressed: _submitRegister,
                    child: const Text("Submit"),
                  ),
                ),
              ],
            ),
          ],
        ),
...
