...
        child: Column(
          children: [
            const SizedBox(
              height: 20,
            ),
            TextField(
                key: const Key('nameField'),
                controller: controllerName,
                decoration: const InputDecoration(
                  labelText: 'Product Name',
                  border: OutlineInputBorder(
                    borderRadius: BorderRadius.all(Radius.circular(20)),
                  ),
                )),
            const SizedBox(
              height: 20,
            ),
            TextField(
                key: const Key('descField'),
                controller: controllerDesc,
                decoration: const InputDecoration(
                  labelText: 'Product Description',
                  border: OutlineInputBorder(
                    borderRadius: BorderRadius.all(Radius.circular(20)),
                  ),
                )),
            const SizedBox(
              height: 20,
            ),
            TextField(
                key: const Key('quantityField'),
                controller: controllerQuantity,
                keyboardType: TextInputType.number,
                decoration: const InputDecoration(
                  labelText: 'Quantity',
                  border: OutlineInputBorder(
                    borderRadius: BorderRadius.all(Radius.circular(20)),
...
              height: 20,
            ),
            Row(
              children: [
                Expanded(
                    child: FilledButton.tonal(
                        key: const Key('saveButton'),
                        onPressed: () async {
                          try {
                            await productController.addProduct(
                                controllerName.text,
                                controllerDesc.text,
                                controllerQuantity.text);
...
