...
        child: Column(
          children: [
            const SizedBox(
              height: 20,
            ),
            TextField(
              key: const Key('edit_name_field'),
              controller: controllerProductName,
              decoration: const InputDecoration(
                labelText: 'Product Name',
                border: OutlineInputBorder(
                  borderRadius: BorderRadius.all(Radius.circular(20)),
                ),
              ),
            ),
            const SizedBox(
              height: 20,
            ),
            TextField(
              key: const Key('edit_desc_field'),
              controller: controllerProductDesc,
              decoration: const InputDecoration(
                labelText: 'Product Description',
                border: OutlineInputBorder(
                  borderRadius: BorderRadius.all(Radius.circular(20)),
                ),
...
